--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aevm",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Another Express Validator Middleware",
   "main": "index.js",
   "keywords": [
@@ -11,7 +11,8 @@
   "author": "Alex Panch",
   "license": "MIT",
   "dependencies": {
-    "joi": "*"
+    "joi": "*",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
