--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "aevm",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Another Express Validator Middleware",
-  "main": "index.js",
+  "main": "./dist/index.js",
+
+  "scripts": {
+    "build": "rm -rf ./dist && tsc && cp ./src/index.d.ts ./dist"
+  },
+
   "keywords": [
     "joi",
     "middleware",
@@ -15,11 +20,17 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/joi": "^14.0.0",
+    "@types/node": "^10.12.11",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.1"
   }
 }
