--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "aevm",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Another Express Validator Middleware",
   "main": "./dist/index.js",
   "homepage": "https://github.com/gi4c0/aevm",
-
   "scripts": {
     "build": "rm -rf ./dist && tsc && cp ./src/index.d.ts ./dist"
   },
-
   "keywords": [
     "joi",
     "middleware",
@@ -21,15 +19,19 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
     "@types/joi": "^14.0.0",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^10.12.11",
+    "chai": "^4.2.0",
     "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.2.1"
