--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "homepage": "https://github.com/gi4c0/aevm",
   "scripts": {
-    "build": "rm -rf ./dist && tsc && cp ./src/index.d.ts ./dist"
+    "build": "rm -rf ./dist && tsc"
   },
   "keywords": [
     "joi",
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
-    "@types/joi": "^14.0.0",
+    "@types/joi": "^14.3.3",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.12.11",
     "chai": "^4.2.0",
