--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aevm",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Another Express Validator Middleware",
   "main": "./dist/index.js",
   "homepage": "https://github.com/gi4c0/aevm",
   "scripts": {
-    "build": "rm -rf ./dist && tsc"
+    "build": "rm -rf ./dist && tsc",
+    "debug": "NODE_ENV=production node --inspect -r ts-node/register src/test.ts"
   },
   "keywords": [
     "joi",
@@ -15,12 +16,12 @@
   "author": "Alex Panch",
   "license": "MIT",
   "dependencies": {
-    "joi": "*"
+    "@hapi/joi": "^16.1.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
-    "@types/joi": "^14.3.3",
+    "@types/hapi__joi": "^15.0.4",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.12.11",
     "chai": "^4.2.0",
