--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "declaration": true,
     "rootDir": "src",
     "outDir": "dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["node", "mocha"]
   },
 
   "include": [
